# iqms

./: .gitignore  README.md  docker-compose.yaml
agent/: agent.py  requirements.txt
agent/init.d/: README.md  internet-monitoring-agent
agent/utils/: config_loader.py  network_tests.py
backend/: TODO.org  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/api/: api_router.py
backend/app/api/v1/endpoints/: #statistics.py#  agents.py  healthcheck.py  measurements.py  statistics.py
backend/app/core/: config.py  logger.py
backend/app/db/: init_db.py  models.py  schemas.py  session.py
backend/app/services/: agent_service.py  stats_service.py
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  middleware.yaml
